docs: reorganized base adrs refactor: changed dtos to records wherever possible